<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.edu.cqjtu.registerlistdemo.StudentInfoActivity">


    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_account_circle_black_48dp"
        android:background="@drawable/side_nav_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/tv_sno"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <EditText
            android:id="@+id/etSno"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/tv_sno"
            android:inputType="number"
            android:textStyle="normal|bold"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/tv_name"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <EditText
            android:id="@+id/etSname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/tv_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="normal|bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/tv_class"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <EditText
            android:id="@+id/etClass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/tv_class"
            android:inputType="text|textPersonName"
            android:textSize="14sp"
            android:textStyle="normal|bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/tv_attendence"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <ScrollView
            style="@android:style/Widget.Holo.Light.ScrollView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:fillViewport="false"
            android:scrollbarStyle="insideOverlay"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAttendence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="14sp"
                    android:typeface="monospace"
                    android:textStyle="normal|bold"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.88"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/tv_score"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore"
            android:layout_weight="1"
            android:textStyle="normal|bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>
